force-app/main/default/objects/Product2/fields/Car_color__c.field-meta.xml
<CustomField>
    <fullName>Car_color__c</fullName>
    <label>Car color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>