force-app/main/default/objects/Product2/fields/Car_model__c.field-meta.xml
<CustomField>
    <fullName>Car_model__c</fullName>
    <label>Car model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiesta</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Civic</fullName>
            </value>
            <value>
                <fullName>CR-V</fullName>
            </value>
            <value>
                <fullName>Oddysey</fullName>
            </value>
            <value>
                <fullName>Versa</fullName>
            </value>
            <value>
                <fullName>Sentra</fullName>
            </value>
            <value>
                <fullName>Altima</fullName>
            </value>
            <value>
                <fullName>Murano</fullName>
            </value>
            <value>
                <fullName>Yaris</fullName>
            </value>
            <value>
                <fullName>Corolla</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>Prius</fullName>
            </value>
            <value>
                <fullName>Patriot</fullName>
            </value>
            <value>
                <fullName>Wangler</fullName>
            </value>
            <value>
                <fullName>Grand Cherokee</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
                <isActive>false</isActive>
                <label>SUV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>